<resources>
    <string name="app_name">ROOMIE</string>
    <string name="mainActivity_WelcomeTo">Welcome to ROOMIE</string>

    <!--These are the names of the activities-->
    <string name="title_activity_after_the_first_click">AfterTheFirstClickActivity</string>
    <string name="search_roommate">룸메찾기</string>
    <string name="search_home">부동산</string>
    <string name="bulletin_board">게시판</string>
    <string name="tips">모현꿀팁</string>
    <string name="mypage">마이페이지</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- sign up page texts -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bulletin_board_title">자유게시판</string>
    <string name="signup_title">회원가입</string>
    <string name="id_here">아이디</string>
    <string name="id_duplicate_check">중복확인</string>
    <string name="pwd_here">비밀번호</string>
    <string name="pwd_again">비밀번호 확인</string>

    <!-- Menu Titles -->
    <string name="login_icon">로그인</string>
    <string name="signup_menu">가입하기</string>
    <string name="mypage_menu">마이페이지</string>

    <!-- These are Label Names -->
    <string name="this_is_our_service">원하는 서비스를 선택하세요</string>
    <string name="find_your_roommate">나의 룸메이트 찾기</string>
    <string name="where_do_you_wanna_live">살고 싶은 집</string>
    <string name="your_opinion">자유게시판</string>
    <string name="tips_label">모현 꿀팁</string>
    <string name="mypage_label">마이페이지</string>
    <string name="login_menu_label">로그인</string>
    <string name="signup_page_label">회원가입을 환영합니다</string>

    <!-- Login Page Menu Titles -->
    <string name="forgot_id_title">아이디 찾기</string>
    <string name="forgot_pwd_title">비밀번호 찾기</string>

    <!-- Signup Page Strings -->
    <string name="go_to_next_page">다음으로>></string>
    <string name="id_replicated_message">아이디가 중복되었습니다</string>
    <string name="id_usable_message">사용가능한 아이디입니다</string>
    <string name="pwd_inappropriate_message">비밀번호를 다시 입력해주세요</string>
    <string name="OK_button">확인</string>

</resources>
