<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingStart="10dp"
    android:paddingRight="10dp"
    android:paddingEnd="10dp"
    android:background="@color/colorBackgroundDefault"
    android:orientation="vertical"
    tool:context=".signup_actions.SignupOneActivity" >

    <LinearLayout
        android:id="@+id/layout_inert_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_title"
            android:textAlignment="center"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_here" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="             " />

            <EditText
                android:id="@+id/edittext_id_input_from_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="             " />

            <Button
                android:id="@+id/btn_id_input_from_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/id_duplicate_check" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd_here" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="          " />

            <EditText
                android:id="@+id/edittext_pwd_input_from_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd_again" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  " />

            <EditText
                android:id="@+id/edittext_pwd_input_again_from_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="                       " />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btn_move_to_signup_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/go_to_next_page"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.85"
                app:layout_constraintHorizontal_bias="1" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</LinearLayout>
